Revert "local sever add"
This reverts commit 99378acb5a3b60bc9931772d4b7ce930b86d3707.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,15 +8,15 @@
   Free for personal and commercial use under the MIT license
   https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE
 -->
-<html lang="{{ site.locale | slice: 0,2 | default: 'en'}}"  class="no-js">
+<html lang="{{ site.locale | slice: 0,2 | default: "en" }}" class="no-js">
   <head>
     {% include head.html %}
     {% include head/custom.html %}
   </head>
 
   <body class="layout--{{ page.layout | default: layout.layout }}{% if page.classes or layout.classes %}{{ page.classes | default: layout.classes | join: ' ' | prepend: ' ' }}{% endif %}">
-    {% raw %}{% include_cached skip-links.html %}{% endraw %}
-    {% raw %}{% include_cached masthead.html %}{% endraw %}
+    {% include_cached skip-links.html %}
+    {% include_cached masthead.html %}
 
     <div class="initial-content">
       {{ content }}
@@ -24,18 +24,18 @@
 
     {% if site.search == true %}
       <div class="search-content">
-        {% raw %}{% include_cached search/search_form.html %}{% endraw %}
+        {% include_cached search/search_form.html %}
       </div>
     {% endif %}
 
     <div id="footer" class="page__footer">
       <footer>
-        {% raw %}{% include footer/custom.html %}{% endraw %}
-        {% raw %}{% include_cached footer.html %}{% endraw %}
+        {% include footer/custom.html %}
+        {% include_cached footer.html %}
       </footer>
     </div>
 
-    {% raw %}{% include scripts.html %}{% endraw %}
+    {% include scripts.html %}
 
   </body>
 </html>
